--- a/a.css
+++ b/a.css
@@ -39,6 +39,42 @@ header {
 .logo:hover {
   transform: rotate(2deg);
 }
+.btn-cta {
+  margin-right: 10px;
+  border: none;
+  font-size: 20px;
+  padding: 6px 12px;
+  background: #ff6a3d;
+  color: #eaeaea;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+nav ul {
+  display: flex;
+  padding: 20px;
+  color: blue;
+}
+
+li {
+  list-style-type: none;
+  padding: 10px;
+}
+
+li a {
+  transition: all 0.5s ease 0s;
+  display: inline-block;
+  font-size: 20px;
+}
+
+li a:hover {
+  transform: rotate(2deg);
+}
+
+a {
+  color: #eaeaea;
+  text-decoration: none;
+}
 
 .container {
   max-width: 1200px;
